# SwitchbotUtil

./: .gitignore  README.md  Switchbot.py  SwitchbotBot.py  SwitchbotCeilingLight.py  SwitchbotCeilingLightPro.py  SwitchbotColorBulb.py  SwitchbotContactSensor.py  SwitchbotCurtain.py  SwitchbotDevice.py  SwitchbotHumidifier.py  SwitchbotKeypad.py  SwitchbotKeypadTouch.py  SwitchbotLock.py  SwitchbotMeter.py  SwitchbotMeterPlus.py  SwitchbotMotionSensor.py  SwitchbotPlug.py  SwitchbotPlugMiniJP.py  SwitchbotPlugMiniUS.py  SwitchbotRobotVacuumCleanerS1.py  SwitchbotRobotVacuumCleanerS1Plus.py  SwitchbotStripLight.py  create_keypad_passcode.py  example_get_devicelist.py  example_get_plug_status.py  example_get_temperature.py  get_bot_power_status.py  get_devicelist.py  get_plug_status.py  open_curatain.py  pyproject.toml  settings.json
docs/: conf.py  index.rst  switchbot_utility.rst
example/: create_keypad_passcode.py  get_devicelist.py  get_plug_status.py  get_temperature.py  open_curtain.py
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  switchbot_utility.html
switchbot/: switchbot.py  switchbot_bot.py  switchbot_ceiling_light.py  switchbot_ceiling_light_pro.py  switchbot_color_bulb.py  switchbot_contact_sensor.py  switchbot_curtain.py  switchbot_device.py  switchbot_humidifier.py  switchbot_ir_air_conditioner.py  switchbot_ir_device.py  switchbot_ir_dvd_speaker.py  switchbot_ir_fan.py  switchbot_ir_ipstreamer_stb.py  switchbot_ir_light.py  switchbot_ir_tv_ipstreamer_stb.py  switchbot_keypad.py  (+12 more)
(+51 files in other folders)
